force-app/main/default/objects/ccrz__E_LocaleFormatter__c/ccrz__E_LocaleFormatter__c.object-meta.xml
<CustomObject>
    <description>A utility custom object that should not have any records. This is used by visualforce pages to render locale-formatted data at run time.</description>
    <label>CC Locale Formatter</label>
    <nameField>
        <label>Locale Formatter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Locale Formatters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>