force-app/main/default/objects/ccrz__E_LocaleFormatter__c/fields/ccrz__Currency__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Currency__c</fullName>
    <label>Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>