force-app/main/default/objects/ccrz__E_LocaleFormatter__c/fields/ccrz__DateField__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DateField__c</fullName>
    <label>Date Field</label>
    <type>Date</type>
</CustomField>