force-app/main/default/objects/ccrz__E_LocaleFormatter__c/fields/ccrz__Number__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Number__c</fullName>
    <label>Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>